--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build test -PbintrayUsername=notset -PbintrayApiKey=notset
+    - name: Quality analysis
+      run: ./gradlew aggregateDetekt -PbintrayUsername=notset -PbintrayApiKey=notset
