--- a/samples/basic-multiplechangelog/settings.gradle
+++ b/samples/basic-multiplechangelog/settings.gradle
@@ -15,20 +15,5 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package io.saagie.updatarium.dsl.action
+rootProject.name = 'basic-multiplechangelog'
 
-import com.autodsl.annotation.AutoDsl
-
-
-/**
- * Here is a simple implementation for Action.
- *
- * It will simply execute the function in parameter.
- */
-@AutoDsl
-class BasicAction(val f: BasicAction.() -> Unit) : Action() {
-
-    override fun execute() {
-        f(this)
-    }
-}
