--- a/samples/basic-multiplechangelog-withlabel/settings.gradle
+++ b/samples/basic-multiplechangelog-withlabel/settings.gradle
@@ -15,18 +15,5 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-rootProject.name = "updatarium"
-include(":core")
-include(":persist-mongodb")
-include(":engine-bash")
-include(":engine-mongodb")
-include(":engine-kubernetes")
-include(":engine-httpclient")
-include(":samples:basic")
-include(":samples:basic-mongodbpersist")
-include(":samples:basic-multiplechangelog")
-include(":samples:basic-multiplechangelog-withlabel")
-include(":samples:http")
-include(":samples:bash")
-include(":samples:mongodb")
-include(":samples:kubernetes")
+rootProject.name = 'basic-multiplechangelog-withlabel'
+
