--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -18,25 +18,27 @@ jobs:
         java-version: 1.8
     - name: Increment version number
       run: ./gradlew incrementMinor
+    - name: extract real version
+      id: extract_version
+      run: echo "::set-output name=v::$(cat version.properties | grep 'semver' | sed -e 's/^version.semver=//')"
+    - name: Build
+      run: ./gradlew build
+    - name: Commit files
+      run: |
+        git config --local user.email "updatarium@saagie.com"
+        git config --local user.name "Updatarium GitHub Action Bot"
+        git add version.properties
+        git commit -m ":bookmark: Bump new version ${{ steps.extract_version.outputs.v }}"
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Build with Gradle
       run: ./gradlew build test
     - name: Quality analysis
       run: ./gradlew aggregateDetekt
     - name: Publish on bintray
       run: ./gradlew bintrayUpload -PbintrayUsername=${{ secrets.BINTRAY_USERNAME }} -PbintrayApiKey=${{ secrets.BINTRAY_APIKEY }}
-    - name: extract real version
-      id: extract_version
-      run: echo "::set-output name=v::$(cat version.properties | grep 'semver' | sed -e 's/^version.semver=//')"
-    - name: Commit files
-      run: |
-       git config --local user.email "github-action@saagie.com"
-       git config --local user.name "GitHub Action Bot"
-       git add version.properties
-       git commit -m "[BOT] Bump new version"
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-       github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -47,8 +49,3 @@ jobs:
         release_name: v${{ steps.extract_version.outputs.v }}
         draft: false
         prerelease: false
-    - name: Delete Branch
-      uses: jessfraz/branch-cleanup-action@master
-      env:
-        NO_BRANCH_DELETED_EXIT_CODE: 0
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
