:construction_worker: Add mecanism to know how to increment version
Add script : incrementVersion.sh to analyze all commits logs and detect a commit with a breaking change (:boom:).
If a breaking change exists, it will increment the major version number.
If not, only the minor version number is incremented.

--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Increment version number
-      run: ./gradlew incrementMajor
+      run: ./.github/script/incrementVersion.sh
     - name: extract real version
       id: extract_version
       run: echo "::set-output name=v::$(cat version.properties | grep 'semver' | sed -e 's/^version.semver=//')"
