--- a/.github/workflows/build_branch.yml
+++ b/.github/workflows/build_branch.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Increment version number
+      run: ./.github/script/incrementVersion.sh
     - name: Build with Gradle
       run: ./gradlew build test
     - name: Quality analysis
