--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@
 kotlin.code.style=official
 bintrayUsername=notset
 bintrayApiKey=notset
+org.gradle.daemon=true
+org.gradle.caching=true
+org.gradle.parallel=true
