--- a/.github/workflows/build_branch.yml
+++ b/.github/workflows/build_branch.yml
@@ -12,14 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Increment version number
-      run: ./.github/script/incrementVersion.sh
-    - name: Build with Gradle
-      run: ./gradlew build test
-    - name: Quality analysis
-      run: ./gradlew aggregateDetekt
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Increment version number
+        run: ./.github/script/incrementVersion.sh
+      - name: Build with Gradle
+        run: ./gradlew build test
+      - name: Quality analysis
+        env:
+          COVERALLS_REPO_TOKEN: "${{ secrets.COVERALLS_REPO_TOKEN }}"
+          COVERALLS_GIT_BRANCH: ${GITHUB_REF##*/}
+        run: ./gradlew aggregateDetekt aggregateJacocoReport coveralls
