--- a/.github/workflows/build_branch.yml
+++ b/.github/workflows/build_branch.yml
@@ -30,9 +30,18 @@ jobs:
           COVERALLS_REPO_TOKEN: "${{ secrets.COVERALLS_REPO_TOKEN }}"
           COVERALLS_GIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
         run: ./gradlew aggregateDetekt aggregateJacocoReport coveralls
+      - name: Docker login
+        run: "docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD"
+        env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       - name: DockerFile creation
-        run: docker build -f updatarium-cli/Dockerfile -t saagie/updatarium:latest updatarium-cli/build/distributions
+        run: |
+          docker build -f updatarium-cli/Dockerfile -t saagie/updatarium:latest updatarium-cli/build/distributions
+          docker tag saagie/updatarium:latest saagie/updatarium-snapshot:${{ steps.extract_branch.outputs.branch }}
       - name: Docker check image
         run: docker run --rm -v ${PWD}:/updatarium-src saagie/updatarium:latest /updatarium-src/samples/basic-multiplechangelog-withtag/src/main/resources/changelogs
       - name: Docker run tests with and without tags
         run: ./.github/script/testDocker.sh
+      - name: Docker push
+        run: docker push saagie/updatarium-snapshot:${{ steps.extract_branch.outputs.branch }}
