:whale: Change base image and add user updatarium
Switch from jdk -> java distroless and add user updatarium (not root)

--- a/updatarium-cli/Dockerfile
+++ b/updatarium-cli/Dockerfile
@@ -1,9 +1,11 @@
-FROM openjdk:11
+FROM openjdk:11-jre-slim
 
 ADD *.tar /
 RUN ln -s /updatarium-cli*/ /updatarium-cli
 
+
 WORKDIR /updatarium-cli
+USER nobody
 
 ENTRYPOINT ["/updatarium-cli/bin/updatarium-cli"]
 CMD ["--help"]
