:sparkles: Add engine-mysql

--- a/samples/mysql/settings.gradle
+++ b/samples/mysql/settings.gradle
@@ -15,21 +15,5 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-rootProject.name = "updatarium"
-include(":core")
-include(":persist-mongodb")
-include(":engine-bash")
-include(":engine-mongodb")
-include(":engine-mysql")
-include(":engine-kubernetes")
-include(":engine-httpclient")
-include(":samples:basic")
-include(":samples:basic-mongodbpersist")
-include(":samples:basic-multiplechangelog")
-include(":samples:basic-multiplechangelog-withtag")
-include(":samples:http")
-include(":samples:bash")
-include(":samples:mongodb")
-include(":samples:mysql")
-include(":samples:kubernetes")
-include(":updatarium-cli")
+rootProject.name = 'mysql'
+
